///////////////////////////////////////////////////////////////////////////
// Copyright (C) Flowbox, Inc / All Rights Reserved
// Unauthorized copying of this file, via any medium is strictly prohibited
// Proprietary and confidential
// Flowbox Team <contact@flowbox.io>, 2013
///////////////////////////////////////////////////////////////////////////

package generated.proto.library;

import "module.proto";
import "attributes.proto";



message Library {
    optional int32  id   = 1;
    optional string name = 2;
    optional string path = 3;
    optional generated.proto.module.Module ast = 4;
    optional PropertyMap propertyMap = 5;

    message PropertyMap {
    	repeated KeyValue items = 1;

    	message KeyValue {
    		required int32 astID = 1;
    		required generated.proto.attributes.Properties properties = 2;
    	}
    }
}
