///////////////////////////////////////////////////////////////////////////
// Copyright (C) Flowbox, Inc / All Rights Reserved
// Unauthorized copying of this file, via any medium is strictly prohibited
// Proprietary and confidential
// Flowbox Team <contact@flowbox.io>, 2013
///////////////////////////////////////////////////////////////////////////

package generated.proto.batch;

import "attributes.proto";
import "crumb.proto";
import "expr.proto";
import "file-system.proto";
import "graph.proto";
import "library.proto";
import "module.proto";
import "nodedefault.proto";
import "project.proto";
import "type.proto";
import "focus.proto";



message Request {
    required Method method = 1;
    enum Method {
        AST_Definitions          = 50;
        AST_AddModule            = 27;
        AST_AddClass             = 28;
        AST_AddFunction          = 29;
        AST_UpdateModuleCls      = 30;
        AST_UpdateModuleImports  = 31;
        AST_UpdateModuleFields   = 32;
        AST_UpdateClassCls       = 33;
        AST_UpdateClassFields    = 34;
        AST_UpdateFunctionName   = 35;
        AST_UpdateFunctionPath   = 36;
        AST_UpdateFunctionInputs = 37;
        AST_UpdateFunctionOutput = 38;
        AST_Remove               = 39;

        NodeDefault_NodeDefaults      = 47;
        NodeDefault_SetNodeDefault    = 48;
        NodeDefault_RemoveNodeDefault = 49;

        FileSystem_LS    = 1;
        FileSystem_Stat  = 2;
        FileSystem_MkDir = 3;
        FileSystem_Touch = 4;
        FileSystem_RM    = 5;
        FileSystem_CP    = 6;
        FileSystem_MV    = 7;

        Graph_NodesGraph = 40;
        Graph_NodeByID   = 41;
        Graph_AddNode    = 42;
        Graph_UpdateNode = 43;
        Graph_RemoveNode = 44;
        Graph_Connect    = 45;
        Graph_Disconnect = 46;

        Library_Libraries     = 8;
        Library_LibraryByID   = 9;
        Library_CreateLibrary = 10;
        Library_LoadLibrary   = 11;
        Library_UnloadLibrary = 12;
        Library_StoreLibrary  = 13;
        Library_BuildLibrary  = 14;
        Library_RunLibrary    = 15;

        Maintenance_Initialize = 16;
        Maintenance_Ping       = 17;
        Maintenance_Dump       = 18;
        Maintenance_Shutdown   = 19;

        Project_Projects      = 20;
        Project_ProjectByID   = 21;
        Project_CreateProject = 22;
        Project_OpenProject   = 23;
        Project_UpdateProject = 24;
        Project_CloseProject  = 25;
        Project_StoreProject  = 26;
    }

    extensions 1000 to max;
}

message Response {
    required Type type = 1;

    enum Type {
        Result    = 0;
        Exception = 1;
    }
    extensions 1000 to max;
}

message Exception { extend Response { optional Exception rsp = 1000; }
    optional string message = 1;
}


message AST {
    message Definitions {
        message Args   { extend Request  { optional Args   req = 1114; }
            optional int32 maxDepth  = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1114; }
            required generated.proto.focus.Focus focus = 1;
        }   
    }
    message AddModule {
        message Args   { extend Request  { optional Args   req = 1101; }
            required generated.proto.module.Module module = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1101; } }   
    }
    message AddClass {
        message Args   { extend Request  { optional Args   req = 1102; }
            required generated.proto.expr.Expr class      = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1102; } }   
    }
    message AddFunction {
        message Args   { extend Request  { optional Args   req = 1103; }
            required generated.proto.expr.Expr function   = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1103; } }   
    }
    message UpdateModuleCls {
        message Args   { extend Request  { optional Args   req = 1104; }
            required generated.proto.type.Type cls        = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1104; } }   
    }
    message UpdateModuleImports {
        message Args   { extend Request  { optional Args   req = 1105; }
            repeated generated.proto.expr.Expr imports    = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1105; } }   
    }
    message UpdateModuleFields {
        message Args   { extend Request  { optional Args   req = 1106; }
            repeated generated.proto.expr.Expr fields     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1106; } }   
    }
    message UpdateClassCls {
        message Args   { extend Request  { optional Args   req = 1107; }
            required generated.proto.type.Type cls        = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1107; } }   
    }
    message UpdateClassFields {
        message Args   { extend Request  { optional Args   req = 1108; }
            repeated generated.proto.expr.Expr fields     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1108; } }   
    }
    message UpdateFunctionName {
        message Args   { extend Request  { optional Args   req = 1109; }
            required string name     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1109; } }   
    }
    message UpdateFunctionPath {
        message Args   { extend Request  { optional Args   req = 1110; }
            repeated string path     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1110; } }   
    }
    message UpdateFunctionInputs {
        message Args   { extend Request  { optional Args   req = 1111; }
            repeated generated.proto.expr.Expr inputs     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1111; } }   
    }
    message UpdateFunctionOutput {
        message Args   { extend Request  { optional Args   req = 1112; }
            required generated.proto.type.Type output     = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1112; } }   
    }
    message Remove {
        message Args   { extend Request  { optional Args   req = 1113; }
            required generated.proto.crumb.Breadcrumbs bc = 1;
            required int32 libID     = 2;
            required int32 projectID = 3;
        }
        message Result { extend Response { optional Result rsp = 1113; } }   
    }
}

message NodeDefault {
    message NodeDefaults {
        message Args   { extend Request  { optional Args   req = 1301; }
            required int32 nodeID    = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1301; }
            required generated.proto.nodedefault.DefaultsMap defaultsMap = 1;
        }   
    }
    message SetNodeDefault {
        message Args   { extend Request  { optional Args   req = 1302; }
            required int32 inPort    = 1;
            required string value    = 2;
            required int32 nodeID    = 3;
            required generated.proto.crumb.Breadcrumbs bc = 4;
            required int32 libID     = 5;
            required int32 projectID = 6;
        }
        message Result { extend Response { optional Result rsp = 1302; } }   
    }
    message RemoveNodeDefault {
        message Args   { extend Request  { optional Args   req = 1303; }
            required int32 inPort    = 1;
            required int32 nodeID    = 2;
            required generated.proto.crumb.Breadcrumbs bc = 3;
            required int32 libID     = 4;
            required int32 projectID = 5;
        }
        message Result { extend Response { optional Result rsp = 1303; } }   
    }
}

message FileSystem {
    message LS {
        message Args   { extend Request  { optional Args   req = 1001; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1001; }
            repeated generated.proto.filesystem.Item items = 1;
        }
    }
    message Stat {
        message Args   { extend Request  { optional Args   req = 1002; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1002; }
            required generated.proto.filesystem.Item item = 1;
        }
    }
    message MkDir {
        message Args   { extend Request  { optional Args   req = 1003; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1003; }
        }
    }
    message Touch {
        message Args   { extend Request  { optional Args   req = 1004; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1004; }
        }
    }
    message RM {
        message Args   { extend Request  { optional Args   req = 1005; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1005; }
        }
    }
    message CP {
        message Args   { extend Request  { optional Args   req = 1006; }
            required string src = 1;
            required string dst = 2;
        }
        message Result { extend Response { optional Result rsp = 1006; }
        }
    }
    message MV {
        message Args   { extend Request  { optional Args   req = 1007; }
            required string src = 1;
            required string dst = 2;
        }
        message Result { extend Response { optional Result rsp = 1007; }
        }
    }
}

message Graph {
    message NodesGraph {
        message Args   { extend Request  { optional Args   req = 1201; }
            required generated.proto.crumb.Breadcrumbs bc = 1;
            required int32 libID     = 2;
            required int32 projectID = 3;
        }
        message Result { extend Response { optional Result rsp = 1201; }
            required generated.proto.graph.Graph graph = 1;
        }   
    }
    message NodeByID {
        message Args   { extend Request  { optional Args   req = 1202; }
            required int32 nodeID    = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1202; }
            required generated.proto.graph.Node node = 1;
        }   
    }
    message AddNode {
        message Args   { extend Request  { optional Args   req = 1203; }
            required generated.proto.graph.Node node      = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1203; }
            required generated.proto.graph.Node node = 1;
        }   
    }
    message UpdateNode {
        message Args   { extend Request  { optional Args   req = 1204; }
            required generated.proto.graph.Node node      = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1204; } }   
    }
    message RemoveNode {
        message Args   { extend Request  { optional Args   req = 1205; }
            required int32 nodeID    = 1;
            required generated.proto.crumb.Breadcrumbs bc = 2;
            required int32 libID     = 3;
            required int32 projectID = 4;
        }
        message Result { extend Response { optional Result rsp = 1205; } }   
    }
    message Connect {
        message Args   { extend Request  { optional Args   req = 1206; }
            required int32 srcNodeID = 1;
            optional int32 srcPort   = 2;
            required int32 dstNodeID = 3;
            required int32 dstPort   = 4;
            required generated.proto.crumb.Breadcrumbs bc = 5;
            required int32 libID     = 6;
            required int32 projectID = 7;
        }
        message Result { extend Response { optional Result rsp = 1206; } }   
    }
    message Disconnect {
        message Args   { extend Request  { optional Args   req = 1207; }
            required int32 srcNodeID = 1;
            optional int32 srcPort   = 2;
            required int32 dstNodeID = 3;
            required int32 dstPort   = 4;
            required generated.proto.crumb.Breadcrumbs bc = 5;
            required int32 libID     = 6;
            required int32 projectID = 7;
        }
        message Result { extend Response { optional Result rsp = 1207; } }   
    }
}

message Library {
    message Libraries {
        message Args   { extend Request  { optional Args   req = 1008; } 
            required int32 projectID = 1;
        }
        message Result { extend Response { optional Result rsp = 1009; } 
            repeated generated.proto.library.Library liraries = 1;
        }
    }
    message LibraryByID {
        message Args   { extend Request  { optional Args   req = 1011; } 
            required int32 projectID = 1;
            required int32 libraryID = 2;
        }
        message Result { extend Response { optional Result rsp = 1011; } 
            required generated.proto.library.Library library = 1;
        }
    }
    message CreateLibrary {
        message Args   { extend Request  { optional Args   req = 1012; } 
            required string name      = 1;
            required string path      = 2;
            required int32  projectID = 3;
        }
        message Result { extend Response { optional Result rsp = 1012; } 
            required generated.proto.library.Library library = 1;
        }
    }
    message LoadLibrary {
        message Args   { extend Request  { optional Args   req = 1013; } 
            required string path      = 1;
            required int32  projectID = 2;
        }
        message Result { extend Response { optional Result rsp = 1013; } 
            required generated.proto.library.Library library = 1;
        }
    }
    message UnloadLibrary {
        message Args   { extend Request  { optional Args   req = 1014; } 
            required int32 libraryID = 1;
            required int32 projectID = 2;
        }
        message Result { extend Response { optional Result rsp = 1014; } }
    }
    message StoreLibrary {
        message Args   { extend Request  { optional Args   req = 1015; } 
            required int32 libraryID = 1;
            required int32 projectID = 2;
        }
        message Result { extend Response { optional Result rsp = 1015; } }
    }
    message BuildLibrary {
        message Args   { extend Request  { optional Args   req = 1016; } 
            required int32 libraryID = 1;
            required int32 projectID = 2;
        }
        message Result { extend Response { optional Result rsp = 1016; } }
    }
    message RunLibrary {
        message Args   { extend Request  { optional Args   req = 1017; } 
            required int32 libraryID = 1;
            required int32 projectID = 2;
        }
        message Result { extend Response { optional Result rsp = 1017; } 
            required string output = 1;
        }
    }
}

message Maintenance {
    message Initialize {
        message Args   { extend Request  { optional Args   req = 1018; } }
        message Result { extend Response { optional Result rsp = 1018; } }   
    }
    message Ping {
        message Args   { extend Request  { optional Args   req = 1019; }
            optional bytes data = 1;
        }
        message Result { extend Response { optional Result rsp = 1019; } 
            optional bytes data = 1;
        }
    }
    message Dump {
        message Args   { extend Request  { optional Args   req = 1020; } }
        message Result { extend Response { optional Result rsp = 1020; } }
    }
    message Shutdown {
        message Args   { extend Request  { optional Args   req = 1021; } }
        message Result { extend Response { optional Result rsp = 1021; } }
    }
}

message Project {
    message Projects {
        message Args   { extend Request  { optional Args   req = 1022; }
            required int32 projectID = 1;
        }
        message Result { extend Response { optional Result rsp = 1022; }
            repeated generated.proto.project.Project project = 1;
        }   
    }
    message ProjectByID {
        message Args   { extend Request  { optional Args   req = 1023; }
            required int32 projectID = 1;
        }
        message Result { extend Response { optional Result rsp = 1023; }
            required generated.proto.project.Project project = 1;
        }   
    }
    message CreateProject {
        message Args   { extend Request  { optional Args   req = 1024; }
            required string name = 1;
            required string path = 2;
            required generated.proto.attributes.Attributes attributes = 3;
        }
        message Result { extend Response { optional Result rsp = 1024; }
            required generated.proto.project.Project project = 1;
        }   
    }
    message OpenProject {
        message Args   { extend Request  { optional Args   req = 1025; }
            required string path = 1;
        }
        message Result { extend Response { optional Result rsp = 1025; }
            required generated.proto.project.Project project = 1;
        }   
    }
    message UpdateProject {
        message Args   { extend Request  { optional Args   req = 1026; }
            required generated.proto.project.Project project = 1;
        }
        message Result { extend Response { optional Result rsp = 1026; } }   
    }    
    message CloseProject {
        message Args   { extend Request  { optional Args   req = 1027; }
            required int32 projectID = 1;
        }
        message Result { extend Response { optional Result rsp = 1027; } }   
    }
    message StoreProject {
        message Args   { extend Request  { optional Args   req = 1028; }
            required int32 projectID = 1;
        }
        message Result { extend Response { optional Result rsp = 1028; } }   
    }
}
